--- a/app/src/main/res/layout/attendance_summary.xml
+++ b/app/src/main/res/layout/attendance_summary.xml
@@ -23,22 +23,23 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/group"
-            android:layout_gravity="center"
-            android:textStyle="bold"
-            android:text="Grupo:"
-            android:textSize="30sp"
-            android:textColor="#FFFFFF" />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text=""
-            android:textSize="20sp"
-            android:textColor="#FFFFFF" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/group"
+                android:layout_gravity="center"
+                android:textStyle="bold"
+                android:text="Grupo:"
+                android:textSize="30sp"
+                android:textColor="#FFFFFF" />
+            <TextView
+                android:id="@+id/group_name_textview"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text=""
+                android:textSize="20sp"
+                android:textColor="#FFFFFF" />
 
         </LinearLayout>
     </FrameLayout>
@@ -56,15 +57,15 @@
         android:gravity="center_horizontal"
         android:orientation="horizontal">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="#0E5688"
-        android:text="ID"
-        android:textSize="18sp"
-        android:gravity="center"
-        android:textColor="#FFFFFF"
-        android:layout_weight="1" />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="#0E5688"
+            android:text="ID"
+            android:textSize="18sp"
+            android:gravity="center"
+            android:textColor="#FFFFFF"
+            android:layout_weight="1" />
 
         <TextView
             android:layout_width="match_parent"
@@ -116,6 +117,7 @@
         android:paddingBottom="40dp">
 
         <Button
+            android:id="@+id/finish_button"
             android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:text="Terminar"
