--- a/app/src/main/res/layout/student.xml
+++ b/app/src/main/res/layout/student.xml
@@ -90,6 +90,7 @@
     </LinearLayout>
 
     <ListView
+        android:id="@+id/list_view"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
