--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -49,14 +49,13 @@
         android:gravity="left" />
 
     <!-- List of groups -->
-    <ListView
-        android:id="@+id/group_list_view"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/clase_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
         android:divider="@android:color/darker_gray"
         android:dividerHeight="1dp" />
-
     <!-- bot button -->
     <LinearLayout
         android:layout_width="match_parent"
@@ -74,14 +73,6 @@
             android:textSize="18sp"
             android:textColor="#FFFFFF"
             android:background="@drawable/radius_button" />
-        <Button
-            android:id="@+id/open_pairing_button"
-            android:layout_width="150dp"
-            android:layout_height="wrap_content"
-            android:text="aegragr dis"
-            android:gravity="center"
-            android:textSize="18sp"
-            android:textColor="#FFFFFF"
-            android:background="@drawable/radius_button" />
+
     </LinearLayout>
 </LinearLayout>
