--- a/app/src/main/res/layout/new_group.xml
+++ b/app/src/main/res/layout/new_group.xml
@@ -57,6 +57,7 @@
             android:textColor="#000000"
             android:layout_marginTop="16dp" />
 
+
         <!-- Botón para seleccionar archivo CSV -->
         <Button
             android:id="@+id/button_select_file"
@@ -65,6 +66,8 @@
             android:text="Seleccionar archivo"
             android:layout_marginTop="16dp"
             android:layout_marginBottom="16dp"
+            android:textColor="#FFFFFF"
+            android:background="@drawable/radius_button"
             android:layout_gravity="center_horizontal"/>
 
         <!-- TextViews para mostrar nombre, ciclo e instructor -->
@@ -107,6 +110,7 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="8dp" />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -172,6 +176,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text=""
+                    android:textColor="#0E5688"
                     android:textStyle="bold"
                     android:paddingStart="16dp"
                     android:paddingEnd="16dp"
@@ -182,7 +187,7 @@
 
     </LinearLayout>
 
-    <!-- Botón de creación de grupo alineado al fondo de la pantalla -->
+    <!-- Botón de creación de grupo  -->
     <Button
         android:id="@+id/create_boton"
         android:layout_width="150dp"
