--- a/app/src/main/res/layout/scan.xml
+++ b/app/src/main/res/layout/scan.xml
@@ -42,22 +42,29 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
-        android:paddingTop="10dp"
-        android:paddingBottom="40dp"
+        android:orientation="vertical"
+        android:paddingTop="100dp"
         >
-
-
+        <!-- Animation View -->
+        <com.airbnb.lottie.LottieAnimationView
+            android:id="@+id/animation_view"
+            android:layout_width="300dp"
+            android:layout_height="300dp"
+            android:layout_marginBottom="20dp"
+            android:layout_gravity="center"
+            app:lottie_rawRes="@raw/your_animation_file"
+            app:lottie_autoPlay="true"
+            app:lottie_loop="true"/>
 
         <Button
             android:id="@+id/scan_boton"
             android:layout_width="150dp"
             android:layout_height="wrap_content"
-            android:text="Pasar Lista"
+            android:text="terminar"
             android:gravity="center"
+            android:layout_gravity="center"
             android:textSize="18sp"
             android:textColor="#FFFFFF"
-            android:padding="10dp"
             android:background="@drawable/radius_button" />
     </LinearLayout>
 </LinearLayout>
