--- a/app/src/main/res/layout/student_list.xml
+++ b/app/src/main/res/layout/student_list.xml
@@ -32,6 +32,7 @@
                 android:textColor="#FFFFFF"/>
 
             <TextView
+                android:id="@+id/nombreGrupo"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -132,9 +133,9 @@
     </LinearLayout>
 
 
-    <!-- attendance list -->
-    <ListView
-        android:id="@+id/listView"
+    <!-- Students list -->
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/lista_alumnos_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
