--- a/app/src/main/res/layout/list.xml
+++ b/app/src/main/res/layout/list.xml
@@ -32,6 +32,7 @@
                 android:textColor="#FFFFFF"/>
 
             <TextView
+                android:id="@+id/nombre_grupo_textView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
