--- a/app/src/main/res/layout/item_asistencia.xml
+++ b/app/src/main/res/layout/item_asistencia.xml
@@ -6,7 +6,7 @@
     android:padding="8dp">
 
     <TextView
-        android:id="@+id/textViewSimbolo"
+        android:id="@+id/textView_fecha"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
@@ -16,7 +16,7 @@
         android:text="fecha" />
 
     <TextView
-        android:id="@+id/textViewNombre"
+        android:id="@+id/text_dia"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
@@ -25,13 +25,5 @@
         android:textColor="#0E5688"
         android:text="Dia" />
 
-    <TextView
-        android:id="@+id/textViewNombre"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:gravity="center"
-        android:textSize="16sp"
-        android:textColor="#0E5688"
-        android:text="faltas" />
+
 </LinearLayout>
