--- a/app/src/main/res/layout/item_clase.xml
+++ b/app/src/main/res/layout/item_clase.xml
@@ -6,7 +6,6 @@
     android:padding="8dp">
 
     <TextView
-        android:id="@+id/textViewSimbolo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="20sp"
@@ -14,7 +13,7 @@
         android:text="◉" />
 
     <TextView
-        android:id="@+id/textViewNombreClase"
+        android:id="@+id/textView_nombreClase"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="16sp"
