--- a/app/src/main/res/layout/item_faltas.xml
+++ b/app/src/main/res/layout/item_faltas.xml
@@ -7,7 +7,7 @@
     android:gravity="center_vertical">
 
     <TextView
-        android:id="@+id/textViewSimbolo"
+        android:id="@+id/textView_fecha"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
@@ -17,7 +17,7 @@
         android:text="fecha" />
 
     <ImageButton
-        android:id="@+id/imageButton"
+        android:id="@+id/image_button"
         android:layout_weight="1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
