--- a/app/src/main/res/layout/add_devices.xml
+++ b/app/src/main/res/layout/add_devices.xml
@@ -114,10 +114,10 @@
             android:background="@drawable/radius_button" />
 
         <Button
-            android:id="@+id/manual_button"
+            android:id="@+id/back_button"
             android:layout_width="150dp"
             android:layout_height="wrap_content"
-            android:text="Manual"
+            android:text="Regresar"
             android:gravity="center"
             android:textSize="18sp"
             android:textColor="#FFFFFF"
