--- a/app/src/main/res/layout/student_list.xml
+++ b/app/src/main/res/layout/student_list.xml
@@ -18,8 +18,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            >
+            android:orientation="vertical">
 
             <TextView
                 android:paddingTop="8dp"
@@ -40,7 +39,6 @@
                 android:textSize="24sp"
                 android:textColor="#FFFFFF"/>
 
-
         </LinearLayout>
 
     </FrameLayout>
@@ -57,7 +55,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Lista"
+            android:text="pases de lista"
             android:textSize="18sp"
             android:layout_gravity="center"
             android:textColor="#ffff"
@@ -75,7 +73,6 @@
     </LinearLayout>
 
     <!-- Header (Date, day, skips) -->
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -132,7 +129,6 @@
 
     </LinearLayout>
 
-
     <!-- Students list -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/lista_alumnos_recycler_view"
@@ -146,19 +142,30 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
+        android:orientation="vertical"
+        android:gravity="center"
         android:paddingTop="10dp"
-        android:paddingBottom="40dp"
-        >
+        android:paddingBottom="40dp">
 
         <Button
-            android:id="@+id/add_button"
-            android:layout_width="230dp"
+            android:id="@+id/add_device_button"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/radius_button"
             android:gravity="center"
             android:padding="10dp"
             android:text="Agregar Dispositivos"
+            android:textColor="#FFFFFF"
+            android:textSize="18sp" />
+
+        <Button
+            android:id="@+id/add_student_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/radius_button"
+            android:gravity="center"
+            android:padding="10dp"
+            android:text="Agregar Alumno"
             android:textColor="#FFFFFF"
             android:textSize="18sp" />
     </LinearLayout>
