--- a/app/src/main/res/layout/item_alumno.xml
+++ b/app/src/main/res/layout/item_alumno.xml
@@ -7,7 +7,7 @@
     android:gravity="center_vertical">
 
     <TextView
-        android:id="@+id/textViewSimbolo"
+        android:id="@+id/textViewid"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
@@ -17,7 +17,7 @@
         android:text="ID" />
 
     <TextView
-        android:id="@+id/textViewSimbolo"
+        android:id="@+id/textViewNombre"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
@@ -27,7 +27,7 @@
         android:text="nombre" />
 
     <TextView
-        android:id="@+id/textViewSimbolo"
+        android:id="@+id/textViewPorcentaje"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
